ApexWorkbook/src/objects/Review_Request__c.object
<CustomObject>
    <description>This is where users can create a request for a code review</description>
    <fields>
        <fullName>Date_Completed_2nd_Review__c</fullName>
        <label>Date Completed 2nd Review</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Initial_Completed__c</fullName>
        <label>Date Initial Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <formula>Id</formula>
        <label>Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Issues_Found__c</fullName>
        <inlineHelpText>Number of Issues found in this review</inlineHelpText>
        <label>Number of Issues Found</label>
        <summaryForeignKey>Review_Results__c.Review_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Issues_Found_in_Multi_Objects__c</fullName>
        <label>Number of Issues Found in Multi Objects</label>
        <summaryFilterItems>
            <field>Review_Results__c.Multiple__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Review_Results__c.Review_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Objects__c</fullName>
        <label>Number of Objects</label>
        <summaryForeignKey>Apex_Class_List__c.Review_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Review_Objects__c</fullName>
        <inlineHelpText>Number of objects to be reviewed</inlineHelpText>
        <label>Number of Review Objects</label>
        <summaryForeignKey>Apex_Class_List__c.Review_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Yellow_Issues__c</fullName>
        <inlineHelpText>Number of Yellow Issues found</inlineHelpText>
        <label>Number of Yellow Issues</label>
        <summaryFilterItems>
            <field>Review_Results__c.Fix_Color__c</field>
            <operation>equals</operation>
            <value>Yellow</value>
        </summaryFilterItems>
        <summaryForeignKey>Review_Results__c.Review_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Other_Review_Environment__c</fullName>
        <inlineHelpText>If &quot;Other&quot; is selected for the review environment, please identify the sandbox here</inlineHelpText>
        <label>Other Review Environment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Red_Issues__c</fullName>
        <inlineHelpText>Number of red issues found</inlineHelpText>
        <label>Red Issues</label>
        <summaryFilterItems>
            <field>Review_Results__c.Fix_Color__c</field>
            <operation>equals</operation>
            <value>Red</value>
        </summaryFilterItems>
        <summaryForeignKey>Review_Results__c.Review_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Requested_On__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <inlineHelpText>Date/Time request submitted</inlineHelpText>
        <label>Requested On</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <defaultValue>$User.FirstName + &quot; &quot; + $User.LastName</defaultValue>
        <inlineHelpText>Who is requesting the review</inlineHelpText>
        <label>Requestor</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Review_Environment__c</fullName>
        <inlineHelpText>Which environment should this review be done in?</inlineHelpText>
        <label>Review Environment</label>
        <picklist>
            <picklistValues>
                <fullName>Config1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTIInt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QATest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCP2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCPDev</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAT</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reviewer__c</fullName>
        <inlineHelpText>Who is currently assigned to review the code</inlineHelpText>
        <label>Reviewer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Current status of request</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Requested</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed-Initial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-Review Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-Review In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-Review On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-Review Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_Release_Date__c</fullName>
        <inlineHelpText>Date targeted for releasing this new code</inlineHelpText>
        <label>Target Release Date</label>
        <type>Date</type>
    </fields>
    <label>Review Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Requested_On__c</columns>
        <columns>Requestor__c</columns>
        <columns>Review_Environment__c</columns>
        <columns>Status__c</columns>
        <columns>Number_of_Issues_Found__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>RR-{0000}</displayFormat>
        <label>Review Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Review Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Must_specify_environment_name</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ispickval(Review_Environment__c, &apos;Other&apos;),  IF(ISNULL( Other_Review_Environment__c ), true, false) , false)</errorConditionFormula>
        <errorDisplayField>Other_Review_Environment__c</errorDisplayField>
        <errorMessage>You must specify the environment name - if you chose Other, you must enter the name in the Other Review Environment field.</errorMessage>
    </validationRules>
</CustomObject>